[package]
authors = ["Seil Oh <hardboiledbaby@gmail.com>"]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the NUCLEO-F767ZI"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "f767zi"
repository = "https://github.com/ohbargain/f767zi"
version = "0.1.0"

[dependencies]
static-ref = "0.2.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
git = "https://github.com/japaric/embedded-hal"
rev = "7d904f515d15fd5fe7ea34e18820ea83e2651fa2"

[dependencies.nb]
git = "https://github.com/japaric/nb"

[dependencies.stm32f7x7]
features = ["rt"]
git = "https://github.com/ohbargain/stm32f7x7"
rev = "54525067a73a0427c973eba85c14e189d5cd8343"

[dev-dependencies]
cortex-m = "0.3.0"
cortex-m-rtfm = "0.2.0"
cortex-m-semihosting = "0.2.0"
heapless = "0.1.0"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.5"

[profile.release]
debug = true
lto = true
